# ass_to_txt_converter

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-release.yml
src/: ass_to_txt_converter.cpp
